[B]Retrospect v5.5.2 - Changelog - 2022-01-12[/B]

t.b.d.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Changed: RTV Rijnmond now uses RegioGroei back-end.