@@ -15,20 +15,6 @@
       "fanart": "rtvdrenthefanart.jpg"
     },
     {
-      "guid": "EFE57022-9F52-41F9-8775-13CCD001FA56",
-      "name": "Omroep West",
-      "description": {
-        "en": "Video on demand for Omroep West.\n\nThe latest news, weather, traffic from the The Hague region, Zoetermeer, Westland, Delft, Leiden, Alphen aan den Rijn en Gouda.",
-        "nl": "Omroep West Uitzendinggemist.\n\nHet laatste nieuws, weer, verkeer uit regio Den Haag, Zoetermeer, Westland, Delft, Leiden, Alphen aan den Rijn en Gouda."
-      },
-      "icon": "omroepwestlarge.png",
-      "category": "Regional",
-      "channelcode": "omroepwest",
-      "sortorder": 100,
-      "language": "nl",
-      "fanart": "omroepwestfanart.jpg"
-    },
-    {
       "guid": "B2AF5744-4697-44CD-9A54-CFD6A4273207",
       "name": "Omroep Gelderland",
       "description": {
